--- a/app/src/main/res/layout/activity_page_menu.xml
+++ b/app/src/main/res/layout/activity_page_menu.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".Page_Menu">
 
     <EditText
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textColorHint="@color/white"
         android:hint="JaimeLesAnimés"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,6 +27,8 @@
         android:ems="10"
         android:hint="Jojo@Bizarre.adventure"
         android:inputType="textEmailAddress"
+        android:textColorHint="@color/white"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +41,7 @@
         android:layout_width="293dp"
         android:layout_height="8dp"
         android:progress="25"
-        android:progressTint="#2196F3"
+        android:progressTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -50,6 +54,7 @@
         android:layout_width="193dp"
         android:layout_height="26dp"
         android:text="Connectez vous"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
