--- a/app/src/main/res/layout/activity_page_menu.xml
+++ b/app/src/main/res/layout/activity_page_menu.xml
@@ -115,14 +115,14 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="10dp"
-            android:src="" />
+            android:src="@drawable/google" />
 
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="10dp"
 
-            android:src="" />
+            android:src="@drawable/facebook_logo" />
     </LinearLayout>
 
     <TextView
