--- a/app/src/main/res/layout/activity_page_menu.xml
+++ b/app/src/main/res/layout/activity_page_menu.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".Page_Menu">
+    tools:context=".Page_Menu"
+    android:id="@+id/Background"
+    >
 
     <ProgressBar
         android:id="@+id/progressBar"
