--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -18,8 +18,8 @@
         android:ems="10"
         android:hint="@string/pseudonyme"
         android:inputType="textEmailAddress"
-        android:minHeight="48dp"
         android:maxLength="9"
+        android:minHeight="48dp"
 
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -32,8 +32,8 @@
         android:id="@+id/Entrer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/entrer"
         android:background="@drawable/button_bg_color"
+        android:text="@string/entrer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -41,24 +41,23 @@
         app:layout_constraintTop_toBottomOf="@+id/Pseudo" />
 
     <TableLayout
+        android:id="@+id/IntfCombat"
         android:layout_width="536dp"
         android:layout_height="96dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976"
-        android:visibility="invisible"
-        android:id="@+id/IntfCombat">
+        app:layout_constraintVertical_bias="0.976">
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button9"
+                android:id="@+id/SORTS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn"
@@ -67,12 +66,13 @@
                 android:textColor="@color/white" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/OBJETS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/btn"
                 android:text="@string/objets"
-                android:textColor="@color/white"
-                android:background="@drawable/btn"/>
+                android:textColor="@color/white" />
+
         </TableRow>
 
         <TableRow
@@ -80,21 +80,20 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/ATTAQUER"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/btn"
                 android:text="@string/attaquer"
-                android:textColor="@color/white"
-                android:background="@drawable/btn"/>
+                android:textColor="@color/white" />
 
             <Button
-                android:id="@+id/button10"
+                android:id="@+id/FUIR"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/fuir"
-                android:textColor="@color/white"
                 android:background="@drawable/btn"
-                />
+                android:text="@string/fuir"
+                android:textColor="@color/white" />
         </TableRow>
 
     </TableLayout>
@@ -104,9 +103,9 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="293dp"
         android:layout_height="8dp"
+        android:progress="75"
         app:layout_constraintBottom_toTopOf="@+id/Pseudo"
         app:layout_constraintEnd_toEndOf="parent"
-        android:progress="75"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -237,6 +236,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.57" />
+
+    <GridView
+        android:id="@+id/List_sort"
+        android:layout_width="695dp"
+        android:layout_height="95dp"
+        android:numColumns="auto_fit"
+        android:visibility="invisible"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/IntfCombat" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
