--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -104,17 +104,20 @@
         android:layout_width="293dp"
         android:layout_height="8dp"
         android:progress="75"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/Pseudo"
-        app:layout_constraintEnd_toEndOf="parent"
 
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TableLayout
         android:id="@+id/personnage"
-        android:layout_width="734dp"
-        android:layout_height="162dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:visibility="invisible"
+
+
         app:layout_constraintBottom_toTopOf="@+id/Pseudo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,7 +129,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/Icon_Personnage"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="5dp"
@@ -135,7 +138,7 @@
             <ProgressBar
                 android:id="@+id/PvBar"
                 style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="215dp"
+                android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:progress="100"
@@ -153,11 +156,40 @@
 
             <Button
                 android:id="@+id/NextChara"
-                android:layout_width="80dp"
+                android:layout_width="75dp"
                 android:layout_height="40dp"
                 android:background="@drawable/btn"
                 android:gravity="center"
                 android:text="Next" />
+
+            <TextView
+                android:id="@+id/Pv_Ennemy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/btn"
+                android:gravity="center"
+
+                android:text="50/50PV" />
+
+            <ProgressBar
+                android:id="@+id/PvBar_Ennemy"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="180dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:progress="100"
+
+
+                android:progressTint="#4CAF50" />
+
+            <ImageView
+                android:id="@+id/Icon_Ennemy"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/one_punch" />
 
         </TableRow>
 
@@ -180,7 +212,6 @@
                 android:layout_height="match_parent"
 
                 android:layout_marginLeft="10dp"
-                android:backgroundTintMode="src_atop"
                 android:foregroundTint="#3F51B5"
                 android:progress="100"
                 android:progressTint="#3F51B5" />
@@ -194,6 +225,23 @@
                 android:background="@drawable/btn"
                 android:gravity="center"
                 android:text="200/200PM" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/btn"
+                android:gravity="center"
+                android:text="Versus" />
+
+            <TextView
+                android:id="@+id/Nom_Ennemie"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="6"
+                android:background="@drawable/btn"
+                android:gravity="center"
+                android:text="Monster" />
         </TableRow>
 
         <TableRow
@@ -211,14 +259,14 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="45dp">
+            android:layout_width="780dp"
+            android:layout_height="72dp">
 
             <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="5dp"
+
                 android:progressDrawable="@drawable/circle" />
         </TableRow>
     </TableLayout>
@@ -248,6 +296,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/IntfCombat" />
+
+    <Button
+        android:id="@+id/retour"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="55dp"
+        android:text="Retour"
+        android:background="@drawable/btn"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/List_sort"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
