--- a/app/src/main/res/layout/activity_page_menu.xml
+++ b/app/src/main/res/layout/activity_page_menu.xml
@@ -21,6 +21,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Password"
+        android:visibility="invisible"
         app:layout_constraintVertical_bias="0.785" />
 
     <EditText
