--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -8,7 +8,10 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
             android:layout_width="match_parent"
@@ -20,15 +23,36 @@
                 android:id="@+id/NomDuSort"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="#9C27B0"
+                android:backgroundTint="@color/teal_700"
                 android:text="NomDuSort"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/descriptionSort"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_column="3"
+                android:layout_weight="2"
+                android:text="description"
+                android:textColor="@color/white" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/btn"
+            android:backgroundTint="#F44336">
 
             <TextView
                 android:id="@+id/cout_pm"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:background="#03A9F4"
                 android:text="10 PM"
                 android:textColor="@color/white" />
+
         </TableRow>
 
         <TableRow
@@ -41,15 +65,9 @@
                 android:id="@+id/deg_p"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="deg_p"
-                android:textColor="@color/white"/>
-
-            <TextView
-                android:id="@+id/deg_m"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="deg_m"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
         </TableRow>
 
         <TableRow
@@ -59,16 +77,23 @@
             android:backgroundTint="#F44336">
 
             <TextView
-                android:id="@+id/descriptionSort"
+                android:id="@+id/deg_m"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="description"
-                android:textColor="@color/white"/>
+                android:gravity="center"
+                android:text="deg_m"
+                android:textColor="@color/white" />
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="201dp"
+            android:layout_height="173dp"
+            android:background="@drawable/btn"
+            android:backgroundTint="#F44336">
+
+        </TableRow>
+
+
     </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
