--- a/app/src/main/res/layout/activity_page_menu.xml
+++ b/app/src/main/res/layout/activity_page_menu.xml
@@ -35,7 +35,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="10dp"
-
+        android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,7 @@
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColorHint="@color/white"
-
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
