--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -153,7 +153,7 @@
                 android:background="@drawable/btn"
                 android:gravity="center"
                 android:text="567/565PV"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/NextChara"
@@ -176,7 +176,7 @@
                 android:background="@drawable/btn"
                 android:gravity="center"
                 android:text="TextView"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
 
             <ProgressBar
                 android:id="@+id/ManaBar"
@@ -198,7 +198,7 @@
                 android:background="@drawable/btn"
                 android:gravity="center"
                 android:text="200/200PM"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/textView6"
@@ -207,7 +207,7 @@
                 android:background="@drawable/btn"
                 android:gravity="center"
                 android:text="Versus"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
 
         </TableRow>
 
@@ -223,8 +223,7 @@
                 android:background="@drawable/btn"
                 android:gravity="center"
                 android:text="LV 1"
-                android:textColor="@color/white"
-                />
+                android:textColor="@color/white" />
         </TableRow>
 
         <TableRow
@@ -266,37 +265,40 @@
 
     <ListView
         android:id="@+id/ListeMob"
-        android:layout_width="157dp"
-        android:layout_height="300dp"
+        android:layout_width="161dp"
+        android:layout_height="254dp"
         android:layout_marginBottom="45dp"
         android:numColumns="1"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.844"
+        app:layout_constraintHorizontal_bias="0.898"
         app:layout_constraintStart_toEndOf="@+id/Pseudo"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.517" />
 
     <GridView
         android:id="@+id/Enemy_team"
-        android:layout_width="110dp"
-        android:layout_height="333dp"
+        android:layout_width="89dp"
+        android:layout_height="263dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ListeMob"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/Pseudo"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.214" />
 
     <GridView
         android:id="@+id/Team"
-        android:layout_width="172dp"
-        android:layout_height="262dp"
+        android:layout_width="89dp"
+        android:layout_height="160dp"
+        android:layout_marginBottom="48dp"
         app:layout_constraintBottom_toTopOf="@+id/IntfCombat"
         app:layout_constraintEnd_toStartOf="@+id/Pseudo"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/retour"
+        app:layout_constraintHorizontal_bias="0.593"
+        app:layout_constraintStart_toStartOf="@+id/retour"
         app:layout_constraintTop_toBottomOf="@+id/personnage"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintVertical_bias="0.509" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
