--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -161,6 +161,7 @@
                 android:layout_height="40dp"
                 android:background="@drawable/btn"
                 android:gravity="center"
+                android:visibility="invisible"
                 android:text="Next" />
 
         </TableRow>
